tests/ui/fail_fields_of_enum_must_be_a_field.stderr
error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:28:5
   |
28 |     Unit,
   |     ^^^^
...
31 | #[thin_delegate::fill_delegate(external_trait_def = __external_trait_def)]
   | -------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_of_Unit` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:20:12
   |
20 |     Unnamed(String, String),
   |            ^^^^^^^^^^^^^^^^
...
23 | #[thin_delegate::fill_delegate(external_trait_def = __external_trait_def)]
   | -------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_of_Unnamed` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fields of enum variant must be a field
  --> tests/ui/fail_fields_of_enum_must_be_a_field.rs:12:11
   |
12 |     Named { x: String, y: String },
   |           ^^^^^^^^^^^^^^^^^^^^^^^^
...
15 | #[thin_delegate::fill_delegate(external_trait_def = __external_trait_def)]
   | -------------------------------------------------------------------------- in this procedural macro expansion
   |
   = note: this error originates in the macro `__thin_delegate__feed_structenum_def_of_Named` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
